--- a/style.css
+++ b/style.css
@@ -4,14 +4,17 @@
 
 section {
     height: 692px;
-    width: 1920px;
+    width: 100%;
     background-size: cover;
     margin-top: 10px;
     margin-bottom: 10px;
+    background-position: center;
 }
 
-#main-pic {
+.main-pic {
     background-image: url(assets/main-pic.png);
+
+
 }
 
 body {
@@ -26,6 +29,7 @@ ul {
     display: flex;
     gap: 20px;
     justify-content: center;
+    width: 100%;
 }
 
 header {
@@ -41,7 +45,7 @@ header {
     padding-top: 40px;
     display: flex;
     justify-content: center;
-    width: 1920px;
+    width: 100%;
 }
 
 .main-div {
@@ -94,7 +98,7 @@ h5 {
     text-decoration: none;
 }
 
-#iphone16 {
+.iphone16 {
     background-image: url(assets/iphone16.png);
 }
 
@@ -103,7 +107,7 @@ h5 {
     border-color: white;
 }
 
-#gift {
+.gift {
     background-image: url(assets/gift.png);
     display: flex;
     justify-content: center;
@@ -127,24 +131,25 @@ h5 {
 }
 
 #sub-sect {
-    height: 1740px;
+    height: 1746px;
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
     gap: 10px;
 }
 
 .sub-sect-div {
-    width: 942px;
+    width: 100%;
     height: 580px;
     background-size: cover;
 }
 
-#ipad {
+.ipad {
     background-image: url(assets/ipad.png)
 }
 
-.airpod {
-    background-image: url(airpod.png);
+.airpod-pic {
+    background-image: url(assets/airpod.png);
 }
 
 .watch {
@@ -223,7 +228,7 @@ h5 {
 
 .apple-tv {
     height: 705px;
-    width: 1920px;
+    width: 100%;
 }
 
 .scroll-con {
@@ -241,20 +246,24 @@ h5 {
 .scroll-con img {
     padding: 10px;
 }
+
 .news {
-    width: 1920px;
+    width: 100%;
     height: 292px;
 }
+
 .fitness {
     width: 417px;
     height: 236px;
 }
+
 .more {
     position: relative;
     display: flex;
     gap: 10px;
     overflow-x: scroll;
 }
+
 h4 {
     font-weight: 600;
     font-size: 14px;
@@ -263,4 +272,77 @@ h4 {
     position: absolute;
     top: 85px;
     left: 650px;
+}
+
+@media only screen and (max-width: 768px) {
+    .main-pic {
+        background-image: url(assets/mid-size-iphone.png);
+        background-size: cover;
+    }
+}
+
+@media only screen and (max-width: 390px) {
+    .main-pic {
+        background-image: url(./assets/co-iphone16.png);
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    .iphone16 {
+        background-image: url(assets/mid-s-iphone16.png);
+        background-size: cover;
+    }
+}
+
+@media only screen and (max-width: 390px) {
+    .iphone16 {
+        background-image: url(./assets/sm-s-iphone16.png);
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    .ipad {
+        grid-area: 1 / 1 / span 1 / span 2;
+    }
+
+    .card {
+        display: none;
+    }
+}
+
+.sub-section-card-div {
+    height: 1756px;
+    gap: 10px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.sub-section-card-1 {
+    height: 580px;
+    background-color: #F2416B;
+}
+
+.grid-container {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 33.3% 33.3% 33.3%;
+    gap: 10px;
+    width: 100%;
+}
+
+.size1 {
+
+    text-align: center;
+}
+
+.flex {
+    padding-top: 370px;
+}
+
+.image {
+    background-position: center;
+}
+
+.pictu {
+    width: 100%;
 }
