--- a/style.css
+++ b/style.css
@@ -131,7 +131,7 @@ h5 {
 }
 
 #sub-sect {
-    height: 1746px;
+    height: 100%;
     width: 100%;
     display: flex;
     flex-wrap: wrap;
@@ -145,7 +145,9 @@ h5 {
 }
 
 .ipad {
-    background-image: url(assets/ipad.png)
+    background-image: url(assets/ipad.png);
+    background-position: center;
+    background-size: cover;
 }
 
 .airpod-pic {
@@ -274,42 +276,6 @@ h4 {
     left: 650px;
 }
 
-@media only screen and (max-width: 768px) {
-    .main-pic {
-        background-image: url(assets/mid-size-iphone.png);
-        background-size: cover;
-    }
-}
-
-@media only screen and (max-width: 390px) {
-    .main-pic {
-        background-image: url(./assets/co-iphone16.png);
-    }
-}
-
-@media only screen and (max-width: 768px) {
-    .iphone16 {
-        background-image: url(assets/mid-s-iphone16.png);
-        background-size: cover;
-    }
-}
-
-@media only screen and (max-width: 390px) {
-    .iphone16 {
-        background-image: url(./assets/sm-s-iphone16.png);
-    }
-}
-
-@media only screen and (max-width: 768px) {
-    .ipad {
-        grid-area: 1 / 1 / span 1 / span 2;
-    }
-
-    .card {
-        display: none;
-    }
-}
-
 .sub-section-card-div {
     height: 1756px;
     gap: 10px;
@@ -325,13 +291,12 @@ h4 {
 .grid-container {
     display: grid;
     grid-template-columns: 50% 50%;
-    grid-template-rows: 33.3% 33.3% 33.3%;
+    grid-template-rows: repeat(3, 580px);
     gap: 10px;
     width: 100%;
 }
 
 .size1 {
-
     text-align: center;
 }
 
@@ -345,4 +310,52 @@ h4 {
 
 .pictu {
     width: 100%;
+}
+
+@media only screen and (max-width: 768px) {
+    .main-pic {
+        background-image: url(assets/mid-size-iphone.png);
+        background-size: cover;
+    }
+
+    .grid-container {
+        grid-template-rows: repeat(3, 490px);
+    }
+
+    .iphone16 {
+        background-image: url(assets/mid-s-iphone16.png);
+        background-size: cover;
+    }
+
+    .ipad {
+        grid-area: 1 / 1 / span 1 / span 2;
+    }
+
+    .card {
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 390px) {
+    .main-pic {
+        background-image: url(./assets/co-iphone16.png);
+    }
+
+    .iphone16 {
+        background-image: url(./assets/sm-s-iphone16.png);
+    }
+
+    .ipad {
+        grid-area: auto
+    }
+
+    .grid-container {
+        height: 100%;
+        grid-template-columns: 100%;
+        grid-template-rows: repeat(6, 500px);
+    }
+
+    .card {
+        display: block;
+    }
 }
